# logreader

./: LICENSE  README.md  logreader.cabal  stack.yaml
src/: Main.hs
src/LogReader/: Reader.hs  Types.hs
