name:                logreader
version:             0.1.0.0
synopsis:            Read logs from PluginConstructionKit plugins.
description:         Please see README.md
homepage:            http://github.com/keveri/logreader#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:
    LogReader.Reader,
    LogReader.Types
  default-language:    Haskell2010
  build-depends:
    base                  >= 4.7 && < 5,
    aeson                 >= 0.8,
    containers            >= 0.5,
    directory             >= 1.2,
    filepath              >= 1.4,
    string-conversions    >= 0.4,
    text                  >= 1.2,
    PluginConstructionKit >= 0.1,
    TypeCount             >= 0.1
